--- a/src/components/Footer/Contacts.module.scss
+++ b/src/components/Footer/Contacts.module.scss
@@ -25,11 +25,15 @@
 	}
 	&__grid__item {
 		display: flex;
-		flex-direction: column;
-align-items: center;
+		flex-direction: row;
+		justify-content: center;
 		flex-wrap: wrap;
 		margin: 40px 0 100px;
 		&__container {
+
+			padding: 20px;
+			border: 1px solid #62696E;
+			background-color: #252B2F;
 
 			margin: 10px;
 			position: relative;
@@ -38,13 +42,13 @@ align-items: center;
 			transition: all 0.3s ease-in-out;
 			text-decoration: none;
 			display: flex;
-
+			justify-content: center;
+			align-items: center;
 			&:hover {
-				border: 2px;
+				border: 1px solid #7c878f;
 				.contacts__grid__item__container__image {
 					transition: all 0.2s ease-in-out;
 					filter: brightness(150%);
-					scale: 110%;
 				}
 				p{
 					color: #D6D6D6;
@@ -52,7 +56,6 @@ align-items: center;
 			}
 
 			&__image {
-				margin-right: 12px;	
 			}
 
 			p {
