--- a/src/components/Footer/footer.module.scss
+++ b/src/components/Footer/footer.module.scss
@@ -1,15 +1,19 @@
 .footer {
-	height: 100%;
+	height: 80vh;
 	background: #1C1F21;
 	background-size: cover;
-	padding: 120px 60px 0px;
+	padding: 40px 60px 100px;
 
 	@media(max-width: 577px) {
 		padding: 38px 0px;
 	}
 
 	text-align: center;
-
+&__content{
+	padding-top: 0px;
+	height: 100%;
+	position: relative;
+}
 }
 
 .background {
@@ -17,7 +21,7 @@
 	left: 0;
 	//bottom: 0;
 	width: 100%;
-	height: 70%;
+	height: 100%;
 	z-index: 0;
 	opacity: 0.2;
 	background: linear-gradient(0deg, rgba(0, 0, 0, 0) 20%, #1C1F21 80%), url(../../assets/images/footer.svg), #1C1F21;
@@ -25,16 +29,38 @@
 	background-size: cover;
 	border: 0px;
 	outline: 0px;
+
 }
 
-.figma {
+// .figma {
+// 	font-size: 24px;
+// 	font-weight: 300;
+// 	color: #D6D6D6;
+// 	z-index: 10;
+// 	text-decoration: none;
+
+// }
+
+.author{
 	position: absolute;
-	font-weight: 300;
-	color: #D6D6D6;
-	z-index: 10;
 	text-decoration: none;
-	background-color: #62696E;
-	padding: 5px 10px;
-	border-radius: 12px;
-	transform: translate(-30px,70px);
+	font-size: 14px;
+	font-weight: 300;
+	position: absolute;
+	left: 47%;
+	@media(max-width: 800px){
+		left: 40%;
+	}
+	@media(max-width: 600px){
+		left: 38%;
+	}
+	@media(max-width: 400px){
+		left: 35%;
+	}
+	bottom: -145px;
+	color: rgb(255, 255, 255, 0.6) ;
+	span{
+		font-size: 10px;
+		color: rgb(255, 255, 255, 0.6);
+	}
 }
