--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -2,7 +2,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: content-box;
-	font-family: 'Merriweather Sans', sans-serif;
+font-family: 'Play', sans-serif;
 	color: #fff;
 	//background-color: #1C1F21;
 	scroll-behavior: smooth;
