--- a/src/components/Main/Projects.module.scss
+++ b/src/components/Main/Projects.module.scss
@@ -2,26 +2,26 @@
 .projects{
 	margin: 0 auto;
 	position: relative;
-
+	z-index: 10;
+	text-decoration: none;
+	font-size: 36px;
+	color: #D6D6D6;
+	transition: all 0.3s ease-in-out;
+	span {
+	
+			font-size: 24px;
+			color: #62696E;
+		}
 	.projects__active{
 	transition: all 0.3s ease-in-out;
 	text-decoration: none;
 	letter-spacing: 0.1rem;
 	font-size: 2.4rem;
 	color: #ffffff;
-	}
-			position: relative;
-			z-index: 10;
-			text-decoration: none;
-			font-size: 36px;
-			color: #D6D6D6;
-			transition: all 0.3s ease-in-out;
-			line-height: 2rem;
-			span{
 
-				font-size: 24px;
-				color: #62696E;
-			}
+	}
+
+
 	
 	&__grid__item{
 		margin-top: 40px;
@@ -40,9 +40,8 @@
 			transition: all 0.3s ease-in-out;
 			text-decoration: none;
 			&:hover {
-					border: 2px;
-					clip-path: polygon(20% 0, 100% 0, 100% 80%, 80% 100%, 0 100%, 0 20%);
-			
+					background-color: #626E62;
+					scale: 110%;
 					.projects__grid__item__container__image {
 						transition: all 0.2s ease-in-out;
 						filter: brightness(150%);
