--- a/src/components/Main/Skills.module.scss
+++ b/src/components/Main/Skills.module.scss
@@ -13,11 +13,16 @@
 			
 		}
 	a{
+		height: 200px;
 		text-decoration: none;
 		font-size: 2.8rem;
 		color: #D6D6D6;
 		margin: 0;
+			span {
 
+					font-size: 24px;
+					color: #62696E;
+				}
 	}
 
 	.skill__grid {
@@ -36,26 +41,42 @@
 
 			grid-template-rows: repeat(3, 1fr);
 			&__item {
-
+				position: relative;
+				
 				margin: 10px;
 				&__container {
+					transform-style: preserve-3d;
 					position: relative;
-					z-index: 10;
+					z-index: 5;
 					min-width: 120px;
 					height: 120px;
-					border: 1px solid #62696E;
-					background-color: #252B2F;
+					border: 0px solid #62696E;
+					background: #252B2F;
 					border-radius: 16px;
-					transition: all 0.3s ease-in-out;
+					transition: all 0.4s ease;
+					border: 1px solid #c6c9c3;
+					&::after {
+						content: '';
+						width: 0;
+						height: 0;
+						border-style: solid;
+						border-width: 20px 20px 0px 0px;
+						border-color: transparent #c6c9c3 transparent transparent;
+						right: -1px;
+						bottom: -1px;
+						position: absolute;
 
-						&:hover{							
-						border: none;
-						clip-path: polygon(20% 0, 100% 0, 100% 80%, 80% 100%, 0 100%, 0 20%);
+					}
+						&:hover{		
+						border: 1px;
+						background: #374046;
+						clip-path: polygon(5% 0, 100% 0, 100% 94%, 95% 100%, 0 100%, 0 7%);
 							.skill__grid__item__container__image {
 							transition: all 0.2s ease-in-out;
 							filter: brightness(150%);
 								scale: 110%;
 							}
+							
 						}
 					&__image {
 						margin-top: 24px;
